[bdist_wheel]
universal = 0

[versioneer]
VCS = git
style = pep440
versionfile_source = facts/_version.py
versionfile_build = facts/_version.py
tag_prefix = v

[metadata]
description-file = README.rst

[flake8]
exclude = _version.py
max-complexity = 10

[coverage:html]
title = JSON Extensions report

[coverage:report]
exclude_lines =
  except ImportError:
  if __name__ == '__main__':

[coverage:run]
source =
  jsonspec
omit =
  facts/_version.py
